# bayesian_nets_program

./: CMakeLists.txt  README.md
bin_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  runner
instances/: paper_example.cnu  paper_example.dist  paper_example.gbn
scripts/: script.sh
scripts/plots/: data_gbn.csv  data_gbn_big.csv  data_joint_dist.csv  plot1.R  plot2.R
src/: bitvec.cpp  bitvec.h  cnu.cpp  cnu.h  deterministic_operations.cpp  deterministic_operations.h  helpers.hpp  io.cpp  io.h  io_helper.cpp  io_helper.h  main_draw_cn.cpp  main_draw_gbn.cpp  main_evaluate_gbn.cpp  main_gbn_runner.cpp  main_gbn_simplification.cpp  main_joint_dist_runner.cpp  main_merging.cpp  main_node_elimination.cpp  main_node_splitting.cpp  main_path_closing.cpp  main_random_cn.cpp  main_random_gbn.cpp  main_read_write_gbn.cpp  main_runner.cpp  main_simplification.cpp  main_splitting.cpp  main_sub_gbn.cpp  main_tests.cpp  operations.cpp  operations.h
src/cn/: cn.h  cn_io.cpp  cn_io.h  cn_operations.cpp  cn_operations.h  randomized_generation.cpp  randomized_generation.h
src/cnu/: fire_transition.cpp  fire_transition.h  operations_on_gbn.cpp  operations_on_gbn.h  operations_on_joint_dist.cpp  operations_on_joint_dist.h
src/gbn/: gbn.cpp  gbn.h  gbn_check.cpp  gbn_check.h  gbn_evaluation.cpp  gbn_evaluation.h  gbn_io.cpp  gbn_io.h  gbn_modification.cpp  gbn_modification.h  gbn_simplification.cpp  gbn_simplification.h  matrix.cpp  matrix.h  matrix_decomposition.cpp  matrix_io.cpp  matrix_io.h  node_elimination.cpp  node_elimination.h  node_splitting.cpp  node_splitting.h  operations_on_gbn.cpp  operations_on_gbn.h  simplifications.cpp
src/gbn/evaluation/: evaluation.cpp  evaluation.h  probability_bookkeeper.cpp  probability_bookkeeper.h  vertex_set_input_output.cpp  vertex_set_input_output.h  wire_structure.cpp  wire_structure.h
src/gbn/general/: check.cpp  evaluation.cpp  evaluation.h  gbn.cpp  gbn.h  gbn_io.cpp  gbn_io.h  path_closing.cpp  path_closing.h  randomized_generation.cpp  randomized_generation.h  special_cases.cpp  special_cases.h  subgbn.cpp  subgbn.h  vertex_set_input_output.h
src/gbn/matrix/: matrix.cpp  matrix.h  matrix_decomposition.cpp  matrix_decomposition.h  matrix_io.cpp  matrix_io.h  randomized_generation.cpp  randomized_generation.h
src/gbn/modification/: merging.cpp  merging.h  simplification.cpp  simplification.h  splitting.cpp  splitting.h  vertex_add_remove.cpp  vertex_add_remove.h  vertex_set_input_output.cpp  vertex_set_input_output.h
src/gbn/simplification/: global_simplification.cpp  global_simplification.h  local_simplification.cpp  local_simplification.h  simplification.cpp  simplification.h
src/joint_dist/: joint_dist.h  joint_dist_check.cpp  joint_dist_check.h  joint_dist_io.cpp  joint_dist_io.h  special_cases.cpp  special_cases.h
src/runtime_tests/: main_demo_simplifications.cpp  main_gbn_uniform_random_cnu.cpp  main_joint_dist_uniform_random_cnu.cpp
src/runtime_tests/helpers/: cn_parameters.cpp  cn_parameters.h  random_transition_helper.cpp  random_transition_helper.h
src/tests/: cn_io_tests.cpp  gbn_evaluation_tests.cpp  gbn_io_tests.cpp  io_tests.cpp  matrix_decomposition_tests.cpp  matrix_io_tests.cpp  node_splitting_tests.cpp  operation_tests.cpp  operations_on_joint_dist_tests.cpp  simplification_tests.cpp  test_helpers.cpp  test_helpers.h
src/tests/cn/: cn_io_tests.cpp
src/tests/cnu/: gbn_and_joint_dist_tests.cpp  operations_on_joint_dist_tests.cpp
src/tests/gbn/: automated_simplification_tests.cpp  evaluation_tests.cpp  gbn_io_tests.cpp  matrix_decomposition_tests.cpp  matrix_io_tests.cpp  simplification_tests.cpp  splitting_tests.cpp
src/tests/gbn/evaluation/: evaluation_tests.cpp  probability_bookkeeper_tests.cpp  wire_structure_tests.cpp
src/tests/gbn/general/: gbn_io_tests.cpp  randomized_generation.cpp
src/tests/gbn/matrix/: matrix_decomposition_tests.cpp  matrix_io_tests.cpp
src/tests/gbn/modification/: automated_simplification_tests.cpp  merging_tests.cpp  simplification_tests.cpp  splitting_tests.cpp
src/tests/gbn/simplification/: automated_global_simplification_tests.cpp  automated_local_simplification_tests.cpp  automated_simplification_tests.cpp  global_simplification_tests.cpp  local_simplification_tests.cpp  simplification_tests.cpp
src/tests/instances/: basic1.gbn  basic2.gbn  duplicate_inputs.gbn  duplicate_inputs2.gbn  f2_simplification.gbn  f3_simplification_1.gbn  f3_simplification_2.gbn  f3_simplification_3.gbn  f3_simplification_4.gbn  f4_simplification_1.gbn  f4_simplification_2.gbn  f4_simplification_3.gbn  f5_simplification_1.gbn  first_v_of_seven_nodes.gbn  four_nodes.gbn  id_1.gbn  id_2.gbn  id_with_node_1.gbn  line.gbn  line_with_terminator.gbn  line_with_terminator2.gbn  multiple_1_bs.gbn  one_node.gbn  one_node_two_wires.gbn  only_oneb.gbn  operations_assert1_1.dist  operations_assert1_2.dist  operations_initial1.dist  operations_nassert1_1.dist  operations_set1_1.dist  operations_set1_2.dist  read_in_test1.dist  seven_nodes.gbn  seven_nodes_clean_labels.gbn  split.gbn  split_3_2.gbn  split_3_2_small.gbn  split_3_2_small2.gbn  substoch.gbn  substoch2.gbn  (+5 more)
